	* ResMgr.h, TimeDate.h: add default TimeInterval{R,} ctors.
	* LsCache.cc: use TimeIntervalR to convert string to TimeInterval.
	* Timer.h, Timer.cc: add const; new methods GetLastSetting, TimePassed,
	  TimeRemains.
	* misc.h: move MINUTE, HOUR, DAY to TimeDate.h.
	* resource.cc: change net:idle format to TimeInterval.
	* SleepJob.cc: use SMTask::now.

2006-05-24  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc, FileSetOutput.cc, Fish.cc, Http.cc, Resolver.cc,
	  SFtp.cc, SMTask.cc, ftpclass.cc: explicitly request unix time.
	* LsCache.cc: use numeric TimeInterval ctor.
	* ResMgr.cc, ResMgr.h: split off TimeIntervalR from TimeInterval;
	  move TimeInterval to TimeDate.{cc,h}.
	* Resolver.cc: use TimeInterval::Finished method.
	* SleepJob.cc, SleepJob.h: use Time; TimeInterval::GetTimeout.
	* Speedometer.cc: explicitly create TimeDiff.
	* TimeDate.cc, TimeDate.h: optimize time_tuple and Time methods;
	  move TimeInterval here.
	* Timer.cc: use TimeIntervalR.
	* ftpclass.cc: close aborted data connection in few seconds after ABOR;
	  don't use ABOR just after another command.
	* ftpclass.h: add abor_time and last_cmd_time members.

2006-05-19  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc: fixed dyn_cmd_table initialization - last static command
	  was overwritten due to off-by-one error.

2006-05-13  Alexander V. Lukyanov <lav@yars.free.net>

	* Fish.cc, SFtp.cc, resource.cc: add support for recoding in fish
	  and sftp (version<4); new settings fish:charset, sftp:charset.

2006-05-03  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: fixed compilation without ssl.
	* SMTask.cc, SMTask.h: fix compilation with some compilers (e.g. sun).
	* commands.cc: support auto-rename in get1.
	* FileCopy.h: add AutoRename method.
	* Http.cc: fixed extraction of suggested file name; fixed decoding
	  of chunked transfers when content-length is explicitly known.

2006-04-25  Alexander V. Lukyanov <lav@yars.free.net>
