@@ -100,7 +100,7 @@ public:
 # define MakeRef(task)   (_MakeRef((task)),(task))
 #endif
    static int Roll(SMTask *);
-   static void RollAll(int max_time);
+   static void RollAll(const TimeInterval &max_time);
 
    static SMTask *current;
 
