@@ -38,14 +38,14 @@ public:
    int Do();
    bool Stopped() const;
    void Stop() { stop=now; }
-   void Set(const TimeDiff &d);
-   void Set(time_t s,int ms=0) { Set(TimeDiff(s,ms)); }
+   void Set(const TimeInterval&);
+   void Set(time_t s,int ms=0) { Set(TimeInterval(s,ms)); }
+   void SetMilliSeconds(int ms) { Set(TimeInterval(0,ms)); }
    void SetResource(const char *,const char *);
-   void SetMilliSeconds(int ms) { Set(TimeDiff(0,ms)); }
    void Reset();
    void Reconfig(const char *);
    const TimeInterval& GetLastSetting() const { return last_setting; }
-   TimeDiff TimeRemains() const { return Stopped()?TimeDiff(0,0):TimeDiff(stop,now); }
+/*   TimeInterval TimeRemains() const { return Stopped()?TimeInterval(0,0):last_setting-(now-start); }*/
    TimeDiff TimePassed() const { return now-start; }
 };
 
