@@ -326,7 +326,7 @@ static void move_to_background()
    // notify jobs
    Job::lftpMovesToBackground_ToAll();
    // wait they do something, but no more than 1 sec.
-   SMTask::RollAll(1);
+   SMTask::RollAll(TimeInterval(1));
    // if all jobs terminated, don't really move to bg.
    if(Job::NumberOfJobs()==0)
       return;
